// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/openapi/openapi Constructor add body 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/something": {
      "patch": {
        "description": "desc",
        "operationId": "patchid",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "description": "Sample body",
                "properties": {
                  "username": {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Sample body",
        },
        "responses": {
          "200": {
            "content": {
              "plain/text": {},
            },
            "description": "Success",
          },
        },
        "summary": "summary",
        "tags": [
          "example",
        ],
      },
      "post": {
        "description": "desc",
        "operationId": "postid",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "description": "Sample body",
                "properties": {
                  "username": {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Sample body",
        },
        "responses": {
          "200": {
            "content": {
              "plain/text": {},
            },
            "description": "Success",
          },
        },
        "summary": "summary",
        "tags": [
          "example",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Constructor add body, referenced 1`] = `
{
  "components": {
    "schemas": {
      "Username": {
        "description": "Sample body",
        "properties": {
          "username": {
            "description": "Parameter without description.",
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/something": {
      "patch": {
        "description": "desc",
        "operationId": "patchid",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/Username",
              },
            },
          },
          "description": "Sample body",
        },
        "responses": {
          "200": {
            "content": {
              "plain/text": {},
            },
            "description": "Success",
          },
        },
        "summary": "summary",
        "tags": [
          "example",
        ],
      },
      "post": {
        "description": "desc",
        "operationId": "postid",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/Username",
              },
            },
          },
          "description": "Sample body",
        },
        "responses": {
          "200": {
            "content": {
              "plain/text": {},
            },
            "description": "Success",
          },
        },
        "summary": "summary",
        "tags": [
          "example",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Constructor addPath, public vs private method (private method does not get included) 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Constructor setLicense 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 33.0",
      "url": "http://www.apache.org/licenses/LICENSE-33.0.html",
    },
    "termsOfService": "http://dummy.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Constructor simple, added servers and paths 1`] = `
{
  "info": {
    "contact": {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": {
    "/health": {
      "get": {
        "description": "Service healthcheck endpoint",
        "operationId": "healthcheck",
        "responses": {
          "200": {
            "content": {
              "text-plain": {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": [
          "Internals",
        ],
      },
    },
  },
  "servers": [
    {
      "url": "https://server.com",
    },
  ],
}
`;
